--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,5 +1,3 @@
-/* 기존 스타일 유지 */
-
 body {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
@@ -31,13 +29,9 @@ body {
     font-size: 24px;
 }
 
-.close-btn {
-    text-decoration: none;
-    font-size: 24px;
-    color: #000;
-    position: absolute;
-    top: 20px;
-    right: 20px;
+.login-error {
+    color: red;
+    margin-bottom: 15px;
 }
 
 .login-input {
