--- a/src/main/resources/static/css/admin/adminTransaction.css
+++ b/src/main/resources/static/css/admin/adminTransaction.css
@@ -1,45 +1,3 @@
-/* 공통 스타일 */
-.full-width {
-    display: flex;
-    margin-bottom: 20px; /* 섹션 간격 추가 */
-}
-
-.half-width {
-    display: flex;
-    align-items: center; /* 수직 정렬 */
-    flex: 1 1 50%;
-    padding: 0 10px;
-    box-sizing: border-box;
-}
-
-.half-width label {
-    margin-right: 10px; /* 라벨과 div 사이의 간격 */
-}
-
-.second-layer {
-    margin-left: 20px;
-}
-
-.half-width input,
-.date-group {
-    margin-left: 10px;
-}
-
-.btn_group {
-    margin-left: 20px;
-}
-
-.search-bar input[type="text"],
-.search-bar select,
-.search-bar input[type="date"],
-.search-bar input[type="number"] {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    outline: none;
-    box-sizing: border-box;
-}
-
 /* 버튼 스타일 */
 button,
 input[type="button"] {
@@ -139,13 +97,6 @@ body.dark-mode input[type="button"].warning:hover {
     background-color: #ec971f;
 }
 
-.search-buttons {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    gap: 10px;
-}
-
 .product-list-header {
     display: flex;
     justify-content: space-between;
@@ -205,22 +156,30 @@ body.dark-mode input[type="button"].warning:hover {
 /* 정렬 아이콘 스타일 */
 .sortable {
     cursor: pointer;
-    display: inline-flex;
     align-items: center;
     padding: 5px; /* 클릭 영역 확대 */
 }
 
 .sort-icon {
     margin-left: 5px;
-    display: inline; /* 기본적으로 표시 */
 }
 
-.sortable.asc .sort-icon.asc,
-.sortable.desc .sort-icon.desc {
+.sort-icon.asc {
+    display: none;
+}
+
+.sortable.asc .sort-icon.asc {
     display: inline;
 }
 
-.sortable.asc .sort-icon.desc,
+.sortable.asc .sort-icon.desc {
+    display: none;
+}
+
 .sortable.desc .sort-icon.asc {
     display: none;
+}
+
+.sortable.desc .sort-icon.desc {
+    display: inline;
 }
