--- a/src/main/resources/static/css/admin/adminSales.css
+++ b/src/main/resources/static/css/admin/adminSales.css
@@ -3,55 +3,7 @@
 	display: flex;
 	margin-bottom: 20px; /* 섹션 간격 추가 */
 }
-        .stock-update-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
 
-        .stock-update-row {
-            display: flex;
-            align-items: center;
-            margin-bottom: 5px;
-            width: 70%; /* Ensure the row takes up the full width */
-        }
-
-        .stock-update-row select,
-        .stock-update-row input[type="number"] {
-            margin-right: 10px;
-            height: 32px;
-            padding: 5px 10px;
-            font-size: 14px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            outline: none;
-            box-sizing: border-box;
-        }
-
-        .stock-action {
-            width: 100px; /* Specific width for the select */
-        }
-
-        .stock-quantity {
-            width: 80px; /* Specific width for the quantity input */
-        }
-
-        .stock-update-btn {
-            padding: 5px 10px; /* Smaller padding for a more consistent look */
-            font-size: 14px; /* Smaller font size to match input elements */
-            width: 70%; /* Set the button width to match the row width minus the select and input widths */
-            height: 32px; /* Match the height of the select and input elements */
-            border-radius: 5px;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s, box-shadow 0.3s;
-            background-color: #375a7f; /* Primary color for dark mode */
-            color: white;
-        }
-
-        .stock-update-btn:hover {
-            background-color: #2a3e5c; /* Darker shade on hover */
-        }
 .half-width {
 	display: flex;
 	align-items: center; /* 수직 정렬 */
@@ -69,6 +21,9 @@
 }
 
 .half-width input, .date-group {
+	margin-left: 10px;
+}
+.half-width input, .last-Date-group {
 	margin-left: 10px;
 }
 
@@ -244,7 +199,10 @@ body.dark-mode button.warning:hover, body.dark-mode input[type="button"].warning
 .product-list.light-mode tr td {
 	color: #212529; /* 모든 tr의 기본 텍스트 색상 검정으로 설정 */
 }
-
+.searchInput {
+	width:30%;
+}
+#fr_date { margin-left: 5px;}
 button.editButton {
 	padding: 5px 10px;
 	border: none;
