--- a/src/main/resources/static/css/admin/common.css
+++ b/src/main/resources/static/css/admin/common.css
@@ -24,6 +24,12 @@ body.dark-mode {
 	width: 100%;
 	height: 100vh;
 }
+.dropdown {
+	cursor: pointer;
+}
+.dropdown-menu li {
+	cursor: pointer;
+}
 
 .sidebar {
 	width: 200px;
