판매글 등록 및 재고 관리 완성

--- a/src/main/resources/static/css/admin/adminProducts.css
+++ b/src/main/resources/static/css/admin/adminProducts.css
@@ -258,7 +258,9 @@ button.editButton:hover {
     max-height: 100px;
     object-fit: cover;
 }
-
+.deleteAndAdd {
+	gap:10px;
+}
 /* Pagination styles */
 .pagination {
     display: flex;
